# gb-bot

./: .replit  README.md  bot.py  commands.py  config.py  data.json  db.json  db.py  delete_db.py  download_db.py  import_db.py  import_db.sh  load_db.py  main.py  parse_ship_build.py  pyproject.toml  roles.py  show_db.py  test_sheet.py  utils.py
db/: 1016062279726420109  157250726601424896  221576381518053379  253001229028950026  271068785606262795  294284319608930304  315508810984849409  344300541616193556  366569673346514944  458748702794711061  498685965456375820  524065069823295509  707713571844390913  738113960305492029  784362027413274625  879076508122091530  897260757039869972  969221810757460018  989688552642183179
