[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
tabulate = "^0.9.0"
gspread-asyncio = "^1.8.1"
google-api-python-client = "^2.88.0"
google-auth-oauthlib = "^1.0.0"
xds-protos = "^0.0.11"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"